syntax = "proto3";
import "Contracts/Common.proto";

package InsightServices;

service InsightsService {
  rpc TopLoanedBooks(TopLoanedBooksRequestMsg) returns (TopLoanedBooksResponseMsg);
  rpc TopMembersByLoanCount(TopMembersByLoanCountRequestMsg) returns (TopMembersByLoanCountResponseMsg);
  rpc MemberReadingPace(MemberReadingPaceRequestMsg) returns (MemberReadingPaceResponseMsg);
  rpc CoLoanedBooks(CoLoanedBooksRequestMsg) returns (CoLoanedBooksResponseMsg);
}


// Most Loaned book
message TopLoanedBooksRequestMsg {
  int32 PageNumber = 1;
  int32 PageSize = 2;
  Common.TimeRangeMsg Range = 3;
}
message TopLoanedBooksRow {
  int64 BookId = 1;
  string Title = 2;
  int64 Count = 3;
}
message TopLoanedBooksResponseMsg {
  repeated TopLoanedBooksRow Items = 1;
  int32 PageNumber = 2;
  int32 PageSize = 3;
  int32 TotalItems = 4;
}

//Top Borrowers
message TopMembersByLoanCountRequestMsg {
  int32 PageNumber = 1;
  int32 PageSize = 2;
  Common.TimeRangeMsg Range = 3;
}
message TopMembersByLoanCountRow  {
  int64 MemberId = 1;
  string DisplayName = 2;
  int32 Count = 3;
}
message TopMembersByLoanCountResponseMsg {
  repeated TopMembersByLoanCountRow  rows = 1;
}

// reading pace
message MemberReadingPaceRequestMsg {
  int64 MemberId = 1;
}
message ReadingPaceRow {
  int64 BatchId = 1;
  int64 BookId = 2;
  int64 Pages = 3;
  Common.DecimalValue PagePerDay = 4;
}
message MemberReadingPaceResponseMsg {
  double OverallPagesPerDay = 1;
  repeated ReadingPaceRow ReadingPacePerBook = 2;
}

//Co-Loaned books
message CoLoanedBooksRequestMsg{
  int32 PageNumber = 1;
  int32 PageSize = 2;
  int64 BookId = 3;
}
message CoLoanedBooksRow{
  int64 BookId = 1;
  string Title=2;
  int32 Count = 3;
  repeated Common.MemberMsg Members = 4;
}
message CoLoanedBooksResponseMsg{
  repeated CoLoanedBooksRow Items = 1;
  int32 PageNumber = 2;
  int32 PageSize = 3;
  int32 TotalItems = 4;
}

